Fix vertical alignment for themes dialog

--- a/src/app/portlets/dot-edit-page/layout/components/dot-theme-selector/dot-theme-selector.component.scss
+++ b/src/app/portlets/dot-edit-page/layout/components/dot-theme-selector/dot-theme-selector.component.scss
@@ -7,7 +7,6 @@ $theme-item-dimension: 240px;
 
     .ui-dialog{
         min-width: 1056px !important;
-        top: calc((100vh - 760px) / 2) !important;
     }
 
     @media (max-width: 1100px) {
